# m2vip

./: README.md
activeContours/: Makefile  README.md  filter.cpp  main.cpp
anaglyph/caneva/: Makefile  princ.cpp
anaglyph/doc/: notes.t2t
analysis/texture/: notes.sty  notes.t2t
ar/caneva/: princ.cpp
ar/canevampi/: princ.cpp
cache/: add.cpp  add_2.cpp  clean.sh  compile.sh  doc.txt  mul.cpp  mul_2.cpp  mul_2_unroll_4.cpp  mul_2_unroll_4_2_sse.cpp  mul_2_unroll_4_sse.cpp  mul_2_unroll_4_sse_threads.cpp  shuffle.cpp
chanVese/: README.md
contours/: notes.t2t
contours/activeContours/: filter.hpp
contours/chanVese/: Makefile  main.cpp
cuda/: README.md  times.txt
cuda/cpu/: Makefile  histo.c  sobel.c  utils.c  utils.h
cuda/gpu/: Makefile  gray.c  histo.cu  histo_atomic.cu  histo_atomic3.cu  histo_stream.cu  histo_zerocopy.cu  sobel.cu  sobel_stream.cu  sobel_zerocopy.cu  utils.c  utils.h
facerecognition/: code.m  facereco.m  notes.txt
facerecognition/doc/: notes.t2t
morphologie/: notes.t2t
morphologie/src/: binarisation.m  close.m  count.m  equalization.m  histo.m  skel.m
mpianaglyph/canevampi/: noborders.txt
pmc/: Makefile  doc.txt  procedure.txt  stats.sh
pmc/doc/: procedure.txt
pmc/src/: main.cpp  mat.cpp  mat.hpp  shuffle.cpp
pmc/stats/: stats.dem
segmentation/: filters.m  notes.t2t
segmentation/src/: filter.cpp
shaders/tuto/: Makefile  rendupoint.ogv  rendusphere.ogv  vbo_traj_point_tutorial.cpp
texture/: README.md  im44.tif  im9.tif
texture/src/: Filter_Cir.m
visionic/: visionic.m
visionic/Reconstruction/: ComputeF.m  DecomposeTransform.m  DrawCamera.m  F_EightPoints.m  GetMethodName.m  MapsacF.m  SelfCalibrate.m  Show3DScene.m  Triangulation.m  torr_F_constrained_fit.m  torr_estf.m  visionic.m
visionic/Synthese/: CreateColors.m  CreateImage.m  PlaceCamera.m  Pts3D.mat  ShowGeom.fig  imgPoints.m  showgeom.asv  showgeom.m  visionic.m
visionic/doc/: notes.sty  notes.t2t
vr/caneva/: princ.cpp
vr/doc/: notes.t2t
vtk/vtk4.1/: CMakeLists.txt  helpers.cpp  proj.cpp
vtk/vtk5/: CMakeLists.txt  Makefile  TP5_runner  proj.cpp
vtk/vtk7/: CMakeLists.txt  proj.cpp
watermark/: Makefile  fft_utils.cpp  fft_utils.h  read.cpp  stamp.cpp  stamp_check.cpp  stampfft.cpp  stampfft_check.cpp
(+72 files in other folders)
